<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionBarActivity"
    android:weightSum="1">

    <include
        android:id="@+id/my_toolbar"
        layout="@layout/activity_actionbar" />


    <TextView
        android:text="@string/text_play1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView_play1"
        android:gravity="center_horizontal|center"
        android:textSize="18sp" />

    <TextView
        android:text="@string/text_play2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:id="@+id/textView_play2"
        android:gravity="center_horizontal|center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/TVowner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/card_owner"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/CardOwner"
        android:layout_below="@+id/TVowner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/card_num"
        android:layout_marginLeft="10dp"
        android:id="@+id/TVnum"
        android:layout_below="@+id/TVowner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/CardNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVnum"
        android:inputType="date"
        android:ems="10" />

    <TextView
        android:id="@+id/TVexp"
        android:text="@string/card_expi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/CardNum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/CardExp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVexp"
        android:inputType="date"
        android:ems="10" />

    <TextView
        android:id="@+id/TVcryp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/card_crypto"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/CardExp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/CardCryp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVcryp"
        android:inputType="date"
        android:ems="10" />



    <Button
        android:id="@+id/CardRegister"
        android:background="@color/colorAccent"
        android:text="@string/card_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVcryp" />

</LinearLayout>