<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include android:id="@+id/my_toolbar"
        layout="@layout/activity_actionbar"/>

    <Button
        android:text="@string/web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_web"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_date"
        android:onClick="setDate"
        android:layout_below="@+id/btn_web"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <TextView
        android:text="@string/TV_whynot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TV_whynot"
        android:textSize="18sp"
        android:gravity="center_horizontal|center"
        android:layout_below="@+id/my_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />


</RelativeLayout>